--- a/1.html
+++ b/1.html
@@ -13,7 +13,7 @@
   </ol>
 
 <h3>HTML이란 무엇인가</h3>
-<a href="https://www.w3schools.com/html/html_paragraphs.asp" target="_blank" title="html5 specification">Hypertext Markup Language</a> (HTML)is the standard markup language for <strong> creating <u> web </u> pages </strong> and web application.
+<p><a href="https://www.w3schools.com/html/html_paragraphs.asp" target="_blank" title="html5 specification">Hypertext Markup Language</a> (HTML)is the standard markup language for <strong> creating <u> web </u> pages </strong> and web application.
 You cannot be sure how HTML will be displayed.
 
 Large or small screens, and resized windows will create different results.
@@ -21,7 +21,7 @@ Large or small screens, and resized windows will create different results.
 With HTML, you cannot change the display by adding extra spaces or extra lines in your HTML code.
 
 The browser will automatically remove any extra spaces and lines when the page is displayed:
-
+</p>
 
 <br>
 <br>
